tests/tutorial/wrapTutorial.h

void TUT_sum(size_t len, int * values, int * result);
long long TUT_type_long_long(long long arg1);
bool TUT_function3(bool arg);
void TUT_function3b(const bool arg1, bool * arg2, bool * arg3);
void TUT_function4a_bufferify(const char * arg1, int Larg1,
    const char * arg2, int Larg2, TUT_SHROUD_array *DSHF_rv);
const char * TUT_function4b(const char * arg1, const char * arg2);
void TUT_function4b_bufferify(const char * arg1, int Larg1,
    const char * arg2, int Larg2, char * output, int Noutput);
const char * TUT_function4c(const char * arg1, const char * arg2);
void TUT_function4c_bufferify(const char * arg1, int Larg1,
    const char * arg2, int Larg2, TUT_SHROUD_array *DSHF_rv);
double TUT_function5();
double TUT_function5_arg1(double arg1);
double TUT_function5_arg1_arg2(double arg1, bool arg2);
void TUT_function6_from_name(const char * name);
void TUT_function6_from_name_bufferify(const char * name, int Lname);
void TUT_function6_from_index(int indx);
void TUT_function7_int(int arg);
void TUT_function7_double(double arg);
int TUT_function8_int();
double TUT_function8_double();
void TUT_function9(double arg);
void TUT_function10_0();
void TUT_function10_1(const char * name, double arg2);
void TUT_function10_1_bufferify(const char * name, int Lname,
    double arg2);
int TUT_overload1_num(int num);
int TUT_overload1_num_offset(int num, int offset);
int TUT_overload1_num_offset_stride(int num, int offset, int stride);
int TUT_overload1_3(double type, int num);
int TUT_overload1_4(double type, int num, int offset);
int TUT_overload1_5(double type, int num, int offset, int stride);
int TUT_typefunc(int arg);
int TUT_enumfunc(int arg);
int TUT_colorfunc(int arg);
void TUT_get_min_max(int * min, int * max);